--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -5,7 +5,7 @@
       <p><%=@game.game_date%></p>
       <%@game.teams.each do |team|%>
       <%=team.name%>
-      <%team.players_teams.each do |player|%>
+      <%teams.teams_player.each do |player|%>
       <%=player.first_name%>
       <%end%>
       <%end%>
