--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Players#index</h1>
-<p>Find me in app/views/players/index.html.erb</p>
+<h2>Player List</h2>
+
+<table>
+  <tr>
+    <th>First Name:</th>
+    <th>Last Name:</th>
+  </tr>
+    <% @player.each do |p| %>
+      <tr id="player-<%=p.id%>">
+        <td><%= p.first_name %></td>
+        <td><%= p.last_name %></td>
+          </tr>
+        <% end %>
+      </table>
