--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,9 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+<%= link_to "Create Player", new_player_path%><br>
+  <%= link_to "Create Team", new_team_path%><br>
+<%= link_to "Create Game", new_game_path%><br>
+
+
+<%= link_to "Show All Players", players_path%><br>
+  <%= link_to "Show All Teams", teams_path%><br>
+<%= link_to "Show All Games", games_path%><br>
