--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,7 +20,7 @@
   background-color: #314C95;
   overflow: hidden;
   height: 90px;
-  width: 100vw;
+  width: 99vw;
 }
 
 .topnav a {
@@ -65,5 +65,42 @@
     top: 0;
     left: 0;
     transform: none;
+  }
+}
+
+
+body {
+  width: 100vw;
+  height: 100vh;
+  font-family: 'NTR', sans-serif;
+  background: #eee;
+}
+
+h1 {
+  text-align: center;
+}
+
+.sport-contain {
+  display: flex;
+  justify-content: center;
+}
+
+.dash {
+  display: flex;
+  flex-direction: column;
+  width: 280px;
+  height: 320px;
+  justify-content: center;
+  background: white;
+  border: 1px solid #ddd;
+  padding: 20px 20px;
+  margin: 10px;
+  h2 {
+    margin: 0;
+    text-align: center;
+  }
+  img {
+    margin: 10px;
+    align-self: center;
   }
 }
