--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,6 +4,24 @@
 <%= link_to "Create Game", new_game_path%><br>
 
 
-<%= link_to "Show All Players", players_path%><br>
-  <%= link_to "Show All Teams", teams_path%><br>
-<%= link_to "Show All Games", games_path%><br>
+<div id="app">
+<h1>Dashboard</h2>
+<div class="sport-contain">
+<div class="sports" v-for="sport in sports">
+  <dash :sport="sport">
+    <h2>{{ sport.name }}</h2>
+  </dash>
+</div>
+</div>
+</div>
+
+<script type="text/x-template" id="dash">
+<div class="dash">
+<img :src="sport.img" width="235" height="300"/>
+<slot></slot>
+<p>{{ sport.desc }}</p>
+<a :href="sport.path">Click Here</a>
+</div>
+</script>
+<script src="https://unpkg.com/vue@2.4.2"></script>
+<%= javascript_pack_tag 'application' %>
