worked on DB issues

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -80,6 +80,8 @@ h1 {
   text-align: center;
 }
 
+/* *******VUEJS CARDS *********** */
+
 .sport-contain {
   display: flex;
   justify-content: center;
