--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,14 +1,20 @@
+<%= link_to "Create Player", new_player_path%><br>
+
 <h2>Player List</h2>
 
 <table>
   <tr>
     <th>First Name:</th>
     <th>Last Name:</th>
+    <th>Edit</th>
+    <th>Delete</th>
   </tr>
     <% @player.each do |p| %>
-      <tr id="player-<%=p.id%>">
+      <tr id="<%=p.id%>">
         <td><%= p.first_name %></td>
         <td><%= p.last_name %></td>
+        <td><a href="/players/<%= p.id %>/edit">Edit</a></td>
+        <td><%= link_to "Delete", player_path(p.id), remote: true, method: :delete, data: { confirm: 'Are you sure?'} %></td>
           </tr>
         <% end %>
       </table>
