--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,8 +1,8 @@
 <%= link_to "Create Game", new_game_path%><br>
 
 <h2>Game List</h2>
-
-<table>
+<br>
+<table align="center">
   <tr>
     <th>Game Name:</th>
     <th>Game Date:</th>
