--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,8 +1,8 @@
-<%= link_to "Create Player", new_player_path%><br>
+<%= link_to "Create Player", new_player_path %><br>
 
 <h2>Player List</h2>
-
-<table>
+<br>
+<table align="center">
   <tr>
     <th>First Name:</th>
     <th>Last Name:</th>
