--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,10 +22,6 @@
   width: auto;
 }
 
-::-webkit-scrollbar {
-  display: none;
-
-}
 .topnav a {
   float: left;
   color: #f2f2f2;
@@ -71,10 +67,10 @@
 }
 
 
-body {
+body, html {
   font-family: 'NTR', sans-serif;
-  background: #eee;
   margin: 0;
+  height: 100%;
 }
 
 h1 {
@@ -112,19 +108,36 @@ h1 {
 
   .grid-container {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 40% 20% 40%;
   }
 
 /* ******** BACKGROUND IMAGE ********* */
-/* 
+
 .tinted-image {
   background:
     linear-gradient(
-      rgba(255, 0, 0, 0.45),
-      rgba(255, 0, 0, 0.45)
+      rgba(179, 159, 87, 0.45),
+      rgba(179, 159, 87, 0.45)
     ),
-    url(/assets/rugby-background.jpg) no-repeat center center fixed;
+    url(/assets/rugby-background.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
 height: 100%;
-overflow: hidden;
-} */
+}
+
+.tinted-image h1 {
+  margin: 0;
+}
+
+
+.card {
+box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  background: white;
+  border-radius: 5px 5px 5px 5px;
+}
+
+.container {
+  padding: 2px 16px;
+}
