--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,7 +18,7 @@
 .topnav {
   position: relative;
   background-color: #314C95;
-  height: 125px;
+  height: 100px;
   width: auto;
 }
 
@@ -26,13 +26,13 @@
   float: left;
   color: #f2f2f2;
   text-align: center;
-  padding: 50px 16px;
+  padding: 30px;
   text-decoration: none;
   font-size: 30px;
 }
 
 .topnav a:hover {
-  color: black;
+  color: #F1C538;
 }
 
 .topnav a.active {
@@ -43,7 +43,7 @@
 .topnav-centered img {
   float: none;
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -66,11 +66,11 @@
   }
 }
 
-
 body, html {
   font-family: 'NTR', sans-serif;
   margin: 0;
   height: 100%;
+  background-image: linear-gradient(135deg, rgba(49,76,149,1) 0%, rgba(99,120,173,1) 35%, rgba(241,197,56,1) 100%);
 }
 
 h1 {
@@ -94,6 +94,7 @@ h1 {
   border: 1px solid #ddd;
   padding: 20px 20px;
   margin: 10px;
+  border-radius: 10px 10px 10px 10px;
 }
 
   h2 {
@@ -128,16 +129,24 @@ height: 100%;
 
 .tinted-image h1 {
   margin: 0;
+  font-size: 40px;
 }
 
 
 .card {
 box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  background: white;
-  border-radius: 5px 5px 5px 5px;
+  background: #314C95;
+  border-radius: 10px 10px 10px 10px;
+  color: white;
 }
 
 .container {
   padding: 2px 16px;
+}
+
+
+table {
+  background-color: white;
+  padding: 10px;
 }
