--- a/app/views/players/edit.html.erb
+++ b/app/views/players/edit.html.erb
@@ -1,6 +1,8 @@
 <div>
-  <h1>Edit Player</h1>
-
+  <br><h1>Edit Player</h1><br>
+  <div class="grid-container">
+    <div></div>
+    <div class="card container" align="center">
   <%= form_for(@player) do |c|%>
     <h3>First Name:</h3>
     <%= c.text_field :first_name, placeholder: "First Name" %><br>
@@ -17,7 +19,10 @@
     <h3>Re-enter Password:</h3>
     <%= c.password_field :password_confirmation, placeholder: "enter password again"%><br><br>
 
-    <%= c.submit 'Edit Player' %>
-
-  <% end %>
+    <%= c.submit 'Edit Player' %><br>
+    <br>
 </div>
+<div></div>
+</div>
+</div>
+<% end %>
