--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -1,2 +1,20 @@
-<h1>Teams#edit</h1>
-<p>Find me in app/views/teams/edit.html.erb</p>
+<div>
+  <br><h1>Edit Team</h1><br>
+  <div class="grid-container">
+    <div></div>
+    <div class="card container" align="center">
+  <%= form_for(@team) do |t|%>
+    <h3>Team Name:</h3>
+    <%= t.text_field :name, placeholder: "Team Name" %><br><br>
+
+    <h3>Assign Players:</h3>
+    <%= t.collection_check_boxes :player_ids, Player.all, :id, :first_name, {}, { multiple: true} %><br><br>
+
+    <%= t.submit 'Submit Edit' %>
+    <br>
+    <br>
+    </div>
+    <div></div>
+    </div>
+    </div>
+    <% end %>
