--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,7 +1,9 @@
-    <%= link_to "Create Team", new_team_path%><br>
+<br>
+
+    <center><%= link_to "Create Team", new_team_path%></center><br>
 
     <h2>Team List</h2>
-
+<br>
     <table align="center">
       <tr>
         <th>Team Name:</th>
@@ -11,8 +13,8 @@
         <% @team.each do |t| %>
           <tr id="<%=t.id%>">
             <td><%= t.name %></td>
-            <td><a href="/teams/<%= t.id %>/edit">Edit</a></td>
-            <td><%= link_to "Delete", player_path(t.id), remote: true, method: :delete, data: { confirm: 'Are you sure?'} %></td>
+            <td><a href="/teams/<%= t.id %>/edit"><img src="/assets/edit-button.png"></a></td>
+            <td><%= link_to "Delete", team_path(t.id), remote: true, method: :delete, data: { confirm: 'Are you sure?'} %></td>
               </tr>
             <% end %>
           </table>
