--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -7,14 +7,20 @@
     <table align="center">
       <tr>
         <th>Team Name:</th>
+        <th>Player Name:</th>
         <th>Edit</th>
         <th>Delete</th>
       </tr>
         <% @team.each do |t| %>
           <tr id="<%=t.id%>">
             <td><%= t.name %></td>
+            <td><% t.players.each do |p| %>
+                <%=p.first_name%><br>
+              <%end%>
             <td><a href="/teams/<%= t.id %>/edit"><img src="/assets/edit-button.png"></a></td>
-            <td><%= link_to "Delete", team_path(t.id), remote: true, method: :delete, data: { confirm: 'Are you sure?'} %></td>
+            <td><%= link_to team_path(t.id), remote: true, method: :delete, data: { confirm: 'Are you sure?'} do %>
+              <%= image_tag("/assets/remove-file.png") %>
+              <% end %></td>
               </tr>
             <% end %>
           </table>
